[package]
name = "komachi-db"
version = "0.1.0"
authors = ["dark-flames <dark_flames@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
replace_with = "0.1.7"
rand = "0.7.1"
bytes = "0.5.6"
crc32fast = "1.2.1"

[dev-dependencies]
rusty-hook = "^0.11.2"
criterion = "0.3"
threadpool = "1.8.1"

[lib]
